--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,22 +8,29 @@
     "build": "tsc && vite build",
     "build:widget": "vite build --config vite.widget.config.ts",
     "preview": "vite preview",
-    "test": "vitest",
+  "test": "vitest",
+  "test:unit": "vitest --run",
+  "test:e2e": "playwright test -c apps/web/playwright.config.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write src/",
     "clean": "rm -rf dist node_modules"
   },
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
     "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.20.2",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.536.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+  "@playwright/test": "^1.45.0",
+  "@testing-library/react": "^16.0.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
@@ -34,6 +41,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+  "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
