feat(ai): DB migration + models for transcript/summary/sentiment/tags/captions; enqueue endpoint; minimal AI worker and service; UI shows captions/sentiment/tags on wall/dashboard

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,12 @@ VITE_API_BASE=http://localhost:5000
 
 # JWT Configuration
 JWT_SECRET=your-jwt-secret-from-supabase
+
+# Email Configuration
+EMAIL_SMTP_HOST=smtp.gmail.com
+EMAIL_SMTP_PORT=587
+EMAIL_ENABLE_SSL=true
+EMAIL_USERNAME=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM_ADDRESS=noreply@trustloops.com
+EMAIL_FROM_NAME=TrustLoops
