--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -26,6 +26,15 @@
     "StoreId": "your-store-id",
     "WebhookSecret": "your-webhook-secret"
   },
+  "Email": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "EnableSsl": "true",
+    "Username": "",
+    "Password": "",
+    "FromAddress": "noreply@trustloops.com",
+    "FromName": "TrustLoops"
+  },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
     "MinimumLevel": {
